--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,1 +1,55 @@
-hddhdhdh
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Renz VPN Build Privacy Policy</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+    </style>
+</head>
+<body>
+
+    <h1>Renz VPN Build Privacy Policy</h1>
+
+    <p><strong>Effective Date:</strong> October 30, 2024</p>
+
+    <h2>Introduction</h2>
+
+    <p>Renz VPN Build is committed to protecting your privacy. This Privacy Policy explains how we handle your information when you use our Renz VPN Build app for Android ("App").</p>
+
+    <h2>Information We Collect</h2>
+
+    <p>We do not collect or retain any personal data that can identify you, such as your name, email address, IP address, or browsing history.</p>
+
+    <h2>Third-Party Advertising</h2>
+
+    <p>Our App uses AdMob to display advertisements. AdMob may collect certain information about your device and your activity within the App, such as your device ID, advertising ID, IP address, and location. AdMob may use this information to serve you personalized ads.</p>
+
+    <h2>Your Choices</h2>
+
+    <p>You can opt out of personalized advertising by adjusting your device settings.</p>
+
+    <h2>Data Security</h2>
+
+    <p>We take security measures to protect your information from unauthorized access and use.</p>
+
+    <h2>Changes to This Privacy Policy</h2>
+
+    <p>We may update this Privacy Policy from time to time. We will notify you of any material changes by posting the updated Privacy Policy on this page.</p>
+
+    <h2>Contact Us</h2>
+
+    <p>If you have any questions about this Privacy Policy, please contact us at <a href="mailto:renzbarbz@gmail.com">renzbarbz@gmail.com</a>.</p>
+
+    <h2>Additional Information for Android Users</h2>
+
+    <p>Renz VPN Build complies with Google Play's Developer Program Policies regarding privacy and data security.</p>
+
+</body>
+</html>
+
