--- a/HD-VPN.html
+++ b/HD-VPN.html
@@ -23,21 +23,21 @@
 
     <h2>ข้อมูลที่เราเก็บรวบรวม</h2>
 
-    <p>แอปของเราอาจเก็บรวบรวมข้อมูลดังต่อไปนี้:
+    <p>แอปของเราอาจเก็บรวบรวมข้อมูลดังต่อไปนี้:<p/>
 
-ข้อมูลการระบุตัวตนอุปกรณ์ เช่น ที่อยู่ IP และชื่ออุปกรณ์
-เวอร์ชันของระบบปฏิบัติการและการตั้งค่าแอปพลิเคชัน
-เวลาที่ใช้งานแอปและข้อมูลการโต้ตอบกับฟีเจอร์ต่าง ๆ ในแอป
-ข้อมูลที่ถูกเก็บโดยบุคคลที่สาม เช่น ผู้ให้บริการวิเคราะห์ข้อมูล</p>
+    <p>ข้อมูลการระบุตัวตนอุปกรณ์ เช่น ที่อยู่ IP และชื่ออุปกรณ์
+       เวอร์ชันของระบบปฏิบัติการและการตั้งค่าแอปพลิเคชัน
+       เวลาที่ใช้งานแอปและข้อมูลการโต้ตอบกับฟีเจอร์ต่าง ๆ ในแอป
+       ข้อมูลที่ถูกเก็บโดยบุคคลที่สาม เช่น ผู้ให้บริการวิเคราะห์ข้อมูล</p>
 
     <h2>การใช้ข้อมูล</h2>
 
-    <p>ข้อมูลที่เราเก็บรวบรวมจะถูกใช้เพื่อ:
+    <h3>ข้อมูลที่เราเก็บรวบรวมจะถูกใช้เพื่อ:</h3>
 
-ปรับปรุงและพัฒนาแอปพลิเคชัน
-แก้ไขปัญหาและบำรุงรักษาแอป
-วิเคราะห์การใช้บริการเพื่อให้บริการดีขึ้น
-รักษาความปลอดภัยของข้อมูล</p>
+    <p>ปรับปรุงและพัฒนาแอปพลิเคชัน
+       แก้ไขปัญหาและบำรุงรักษาแอป
+       วิเคราะห์การใช้บริการเพื่อให้บริการดีขึ้น
+       รักษาความปลอดภัยของข้อมูล</p>
 
     <h2>การเปิดเผยข้อมูล</h2>
 
