--- a/HD-VPN.html
+++ b/HD-VPN.html
@@ -23,7 +23,7 @@
 
     <h2>ข้อมูลที่เราเก็บรวบรวม</h2>
 
-    <p>แอปของเราอาจเก็บรวบรวมข้อมูลดังต่อไปนี้:<p/>
+    <h4>แอปของเราอาจเก็บรวบรวมข้อมูลดังต่อไปนี้:<h4/>
 
     <p>ข้อมูลการระบุตัวตนอุปกรณ์ เช่น ที่อยู่ IP และชื่ออุปกรณ์
        เวอร์ชันของระบบปฏิบัติการและการตั้งค่าแอปพลิเคชัน
@@ -32,7 +32,7 @@
 
     <h2>การใช้ข้อมูล</h2>
 
-    <h3>ข้อมูลที่เราเก็บรวบรวมจะถูกใช้เพื่อ:</h3>
+    <h4>ข้อมูลที่เราเก็บรวบรวมจะถูกใช้เพื่อ:</h4>
 
     <p>ปรับปรุงและพัฒนาแอปพลิเคชัน
        แก้ไขปัญหาและบำรุงรักษาแอป
@@ -41,11 +41,11 @@
 
     <h2>การเปิดเผยข้อมูล</h2>
 
-    <p>เราจะไม่เปิดเผยข้อมูลส่วนบุคคลของคุณแก่บุคคลที่สาม ยกเว้นในกรณีต่อไปนี้:
+    <h4>เราจะไม่เปิดเผยข้อมูลส่วนบุคคลของคุณแก่บุคคลที่สาม ยกเว้นในกรณีต่อไปนี้:</h4>
 
-การปฏิบัติตามข้อกำหนดทางกฎหมาย
-การบังคับใช้ข้อตกลงของเรา
-การป้องกันและป้องปรามการกระทำที่เป็นการฉ้อโกง</p>
+    <p>การปฏิบัติตามข้อกำหนดทางกฎหมาย
+       การบังคับใช้ข้อตกลงของเรา
+       การป้องกันและป้องปรามการกระทำที่เป็นการฉ้อโกง</p>
 
     <h2>ความเป็นส่วนตัวของเด็ก</h2>
 
