--- a/HD-VPN.html
+++ b/HD-VPN.html
@@ -23,7 +23,7 @@
 
     <h2>ข้อมูลที่เราเก็บรวบรวม</h2>
 
-    <h4>แอปของเราอาจเก็บรวบรวมข้อมูลดังต่อไปนี้:<h4/>
+    <h4>แอปของเราอาจเก็บรวบรวมข้อมูลดังต่อไปนี้:</h4>
 
     <p>ข้อมูลการระบุตัวตนอุปกรณ์ เช่น ที่อยู่ IP และชื่ออุปกรณ์
        เวอร์ชันของระบบปฏิบัติการและการตั้งค่าแอปพลิเคชัน
